Fixed code fence alignment issue. (#57)

--- a/src/styles/components/article.scss
+++ b/src/styles/components/article.scss
@@ -444,6 +444,10 @@
     overflow-wrap: normal !important;
   }
 
+  pre code {
+    padding: 0;
+  }
+
   code {
     color: var(--text-normal);
     margin: 0;
